implement cross-site request forgery (CSRF)

--- a/public/assets/css/forms.css
+++ b/public/assets/css/forms.css
@@ -1,29 +1,17 @@
-/* 
-.form-control {
-  margin: 1rem 0;
+.user-message {
+  margin: auto;
+  width: 40%;
+  border: 1px solid #4771fa;
+  padding: 1rem;
+  border-radius: 3px;
+  background: #b9c9ff;
+  text-align: center;
 }
 
-.form-control label,
-.form-control input,
-.form-control textarea {
-  display: block;
-  width: 100%;
-  margin-bottom: 0.25rem;
-}
-
-.form-control input,
-.form-control textarea {
-  border: 1px solid #a1a1a1;
-  font: inherit;
-  border-radius: 2px;
-}
-
-.form-control input:focus,
-.form-control textarea:focus {
-  outline-color: #00695c;
-}
-
-.form-control input.invalid,
-.form-control textarea.invalid {
+.user-message--error {
+  font-weight: 600;
+  color: red;
   border-color: red;
-} */
+  background: rgb(255, 176, 176);
+}
+
