--- a/views/absence/absence.ejs
+++ b/views/absence/absence.ejs
@@ -60,6 +60,7 @@
           autocomplete="off"
         />
       </div>
+      <input type="hidden" name="_csrf" value="<%= csrfToken %>" >
       <button type="submit" class="btn">Đăng ký</button>
     </form>
   </div>
