--- a/views/statistics/statistics.ejs
+++ b/views/statistics/statistics.ejs
@@ -15,6 +15,7 @@
                     <option value="monthSalary">lương tháng</option>
                 </select>
             <input type="text" name="search" id="search">
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>" >
             <input type="submit" value="Tìm">
         </form>
     <em>(Tra cứu thông tin làm việc theo ngày, tháng, năm))</em>         
