--- a/views/covid/covid.ejs
+++ b/views/covid/covid.ejs
@@ -8,7 +8,8 @@
 <div class="covid-content">
   <div class="covid-title">
       <h3><%= user.name %></h3>
-      <a href="/covid-details">Chi tiết</a>
+      <a href="/covid-details">Thông tin cá nhân</a>
+      <a href="/admin/covid-details">Thông tin các nhân viên</a>
   </div>
 
   <div class="covid-vaccine">
