--- a/views/covid/covid-staffs.ejs
+++ b/views/covid/covid-staffs.ejs
@@ -40,11 +40,12 @@
                     </tr>
                     <% }) %>     
             <div class="download">
-                <form action="/admin/covid-details?action=download" method="POST">
+                <!-- <form action="/admin/covid-details?action=download" method="POST">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>" >
 
                     <button type="submit" class="btn btn-info fa fa-download" />
-                 </form>
+                 </form> -->
+                 <a class="btn btn-primary fa fa-download" href="/admin/covid-details?action=download"></a>
             </div>    
 
             <% } else { %>      
