--- a/views/covid/covid.ejs
+++ b/views/covid/covid.ejs
@@ -8,12 +8,17 @@
 <div class="covid-content">
   <div class="covid-title">
       <h3><%= user.name %></h3>
-      <a href="/covid-details">Thông tin cá nhân</a>
-      <form action="/admin/covid-details?action=view" method="POST">
-        <input type="hidden" name="_csrf" value="<%= csrfToken %>" >
 
-        <input type="submit" class="fa fa-download" value="Thông tin các nhân viên" />
-     </form>
+      <div class="covid-btn">
+        <a class="btn btn-light" href="/covid-details">Thông tin cá nhân</a>
+        <!-- <form action="/admin/covid-details?action=view" method="POST">
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>" >
+
+          <button type="submit" class="btn btn-light">Thông tin các nhân viên</button>
+        </form> -->
+
+        <a class="btn btn-light"  href="/admin/covid-details?action=view">Thông tin các nhân viên</a>
+      </div>
   </div>
 
   <div class="covid-vaccine">
