--- a/views/covid/covid-download.ejs
+++ b/views/covid/covid-download.ejs
@@ -6,13 +6,13 @@
     th,
     td {
     border: 1px solid black;
-    padding: 0.75rem;
+    /* padding: 0.75rem; */
     font-size: 0.5rem;
-    margin: 1rem 0.75rem;
+    /* margin: 1rem 0.75rem; */
     }
 
     table {
-        margin: 2rem auto;
+        margin: auto;
     }
 
     .attendance-content {
