--- a/views/covid/covid-download.ejs
+++ b/views/covid/covid-download.ejs
@@ -6,19 +6,18 @@
     th,
     td {
     border: 1px solid black;
-    /* padding: 0.75rem; */
-    font-size: 0.5rem;
+    padding: 0.75rem;
+    font-size: 1rem;
     /* margin: 1rem 0.75rem; */
     }
 
     table {
-        margin: auto;
+        margin: 1rem auto;
     }
 
     .attendance-content {
     margin: auto;
     background: #fff;
-    margin: 2rem auto;
     padding: 1rem 0.5rem;
     text-align: center;
     display: flex;
@@ -26,22 +25,13 @@
     border-radius: 10px;
     box-shadow: 0 1px 2px #00000033;
     }
-
-    .download {
-    text-align: right;
-    margin: 1rem 0.75rem 0.5rem;
-    }
-
-    .fa-download {
-    margin-right: 0.5rem;
-    }
 </style>
 </head>
 
 <body>
     <div class="attendance-content" id="staffs-covid">
     
-<strong><h3>Danh sách nhân viên và thông tin về COVID-19</h3></strong>
+    <strong><p>Danh sách nhân viên và thông tin về COVID-19</p></strong>
     <table>
         <thead>
             <tr>
