--- a/views/covid/covid-download.ejs
+++ b/views/covid/covid-download.ejs
@@ -7,7 +7,7 @@
     td {
     border: 1px solid black;
     padding: 0.75rem;
-    font-size: 1rem;
+    font-size: 0.25rem;
     /* margin: 1rem 0.75rem; */
     }
 
@@ -31,7 +31,7 @@
 <body>
     <div class="attendance-content" id="staffs-covid">
     
-    <strong><p>Danh sách nhân viên và thông tin về COVID-19</p></strong>
+    <strong><h5>Danh sách nhân viên và thông tin về COVID-19</h5></strong>
     <table>
         <thead>
             <tr>
